# MalaBoT

./: .coverage  .created  .env.example  .gitignore  .pre-commit-config.yaml  0001-Fix-command-registration-TypeError.patch  0002-Add-missing-add_user_xp-method-to-fix-XP-errors.patch  0003-Fix-both-issues-Add-missing-level_roles-table-and-co.patch  ANALYSIS_REPORT.md  AUDIT_REPORT.md  BIRTHDAY_ANNOUNCEMENT_IMPROVEMENTS.md  BIRTHDAY_PENDING_IMPLEMENTATION.md  CENTRALIZED_SETUP_PLAN.md  CHANGELOG.md  CHANGES_SUMMARY.md  CHEATER_ROLE_PROTECTION_UPDATE.md  CLARIFICATION_NEEDED.md  CLEANUP_AND_STATUS.md  COMMAND_FIX.md  COMMAND_PERMISSIONS_PLAN.md  COMMAND_TEST_CHECKLIST.md  COMPLETION_REPORT.md  CONFIGURATION_ISSUE_EXPLANATION.md  CONFIG_DISPLAY_FIX.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_XP.md  DEPLOYMENT_INSTRUCTIONS.md  DEV_BAT_GUIDE.md  DEV_BAT_STATUS.md  DEV_README.md  DISCOVERY_CORRECTED.md  ERROR_FIXES.md  FILES_TO_DELETE.md  FINAL_SUMMARY.md  FINAL_TESTING_CHECKLIST.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FIX_GUILD_SETTINGS.md  (+151 more)
.github/workflows/: ci.yml
archive/: README.md
archive/sqlite_migrations/: add_component_to_health_logs.py
cogs/: appeal.py  birthdays.py  bot_control.py  fun.py  moderation.py  owner.py  role_connection_improved.py  role_connection_main.py  role_connection_ui.py  role_connection_ui_new.py  role_connections.py  setup.py  utility.py  verification.py  verify.py  verify.py.backup  welcome.py  xp.py  xp.py.backup  xp_fixed.py  xp_old.py
config/: constants.py  settings.py
dashboard/: .env.example  app.py  routes.py
dashboard/templates/: base.html  dashboard.html  fix_indent.py  fix_template.py  guild_settings_complete.html.backup  index.html
dashboard_backup/: app.py
data/: bot.db.backup_20251208_142744
database/: models.py  models.py.backup  models_broken.py  models_original.py  supabase_models.py
database/migrations/: README.md  add_component_to_health_logs.py  migrate_appeals_table.py  migrate_settings_table.py  migrate_to_full_per_guild.py  (+2 more)
fixed_cogs/: xp_fixed.py
outputs/: workspace_output_1761629207_8228.txt  workspace_output_1761629213_1337.txt  workspace_output_1761629217_967.txt  workspace_output_1761629264_8726.txt  workspace_output_1761629417_1514.txt  workspace_output_1761629433_3409.txt  workspace_output_1761629438_5862.txt  workspace_output_1761629453_6935.txt  workspace_output_1761630348_2423.txt  workspace_output_1761630366_308.txt  workspace_output_1761630371_2017.txt  workspace_output_1761630443_7124.txt  workspace_output_1761630449_7877.txt
src/cogs/: appeal.py  (+20 more)
tests/: __init__.py  add_defer_calls.py  conftest.py  create_settings_table.py  test_db_init.py  test_db_simple.py  test_xp_calculations.py
utils/: audit.py  backup_manager.py  enhanced_logger.py  health_checker.py  helpers.py  logger.py  migration_check.py  safe_database.py  startup_manager.py
(+14 files in other folders)
