[tool.poetry]
name = "malabot"
version = "1.0.0"
description = "Multifunctional Discord Bot with XP, Verification, and Moderation"
authors = ["MalaKiiTV <contact@malakii.tv>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.0"
aiosqlite = "^0.19.0"
apscheduler = "^3.10.4"
"python-dotenv" = "^1.0.0"
psutil = "^7.1.3"
colorlog = "^6.10.1"
pynacl = "^1.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
ruff = "^0.1.0"
mypy = "^1.6.0"
pytest = "^7.4.0"
"pytest-asyncio" = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true