[tool.poetry]
name = "malabot"
version = "1.0.0"
description = "Multifunctional Discord Bot with XP, Verification, and Moderation"
authors = ["MalaKiiTV <contact@malakii.tv>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.0"
aiosqlite = "^0.19.0"
apscheduler = "^3.10.4"
"python-dotenv" = "^1.0.0"
psutil = "^7.1.3"
colorlog = "^6.10.1"
pynacl = "^1.6.0"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.1.0"
mypy = "^1.6.0"
pytest = "^7.4.0"
"pytest-asyncio" = "^0.21.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM"]
ignore = [
    "E501",   # Line too long
    "E402",   # Module level import not at top of file
    "E722",   # Bare except
    "F841",   # Local variable assigned but never used
    "W292",   # No newline at end of file
    "W293",   # Blank line contains whitespace
    "I001",   # Import block is un-sorted or un-formatted
    "UP007",  # Use X | Y for type annotations
    "B007",   # Loop control variable not used within loop body
    "C401",   # Unnecessary generator
    "C416",   # Unnecessary list comprehension
    "DTZ003", # Datetime without timezone
    "DTZ005", # Datetime without timezone
    "DTZ006", # Datetime without timezone
    "DTZ007", # Datetime without timezone
    "EM101",  # Exception must not use string literal
    "N999",   # Invalid module name
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true